[package]
name = "sogram"
version = "0.1.0"
authors = ["Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>"]

[features]
binaries = ["structopt", "structopt-derive"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs" }

structopt = { version = "0.1.0", optional = true }
structopt-derive = { version = "0.1.0", optional = true }

[[bin]]
name = "sogram"
required-features = ["binaries"]
